// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseTextEntries should gracefully handle bad input 1`] = `Array []`;

exports[`parseTextEntries should parse pasted file text 1`] = `
Array [
  Object {
    "cardName": "Craterhoof Behemoth",
    "collectorNumber": undefined,
    "count": "2",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Frogmite",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Memnite",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Myr Enforcer",
    "collectorNumber": undefined,
    "count": "2",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Ornithopter",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Sojourner's Companion",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Thought Monitor",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Neoform",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Thoughtcast",
    "collectorNumber": undefined,
    "count": "2",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Cranial Plating",
    "collectorNumber": undefined,
    "count": "3",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Mishra's Bauble",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Shadowspear",
    "collectorNumber": undefined,
    "count": "1",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Springleaf Drum",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Darksteel Citadel",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Glimmervoid",
    "collectorNumber": undefined,
    "count": "2",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Razortide Bridge",
    "collectorNumber": undefined,
    "count": "2",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Spire of Industry",
    "collectorNumber": undefined,
    "count": "2",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Tanglepool Bridge",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Urza's Saga",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "Dispatch",
    "collectorNumber": undefined,
    "count": "2",
    "expansionCode": undefined,
    "type": "sideboard",
  },
  Object {
    "cardName": "Etched Champion",
    "collectorNumber": undefined,
    "count": "3",
    "expansionCode": undefined,
    "type": "sideboard",
  },
  Object {
    "cardName": "Flusterstorm",
    "collectorNumber": undefined,
    "count": "2",
    "expansionCode": undefined,
    "type": "sideboard",
  },
  Object {
    "cardName": "Hurkyl's Recall",
    "collectorNumber": undefined,
    "count": "3",
    "expansionCode": undefined,
    "type": "sideboard",
  },
  Object {
    "cardName": "Pithing Needle",
    "collectorNumber": undefined,
    "count": "1",
    "expansionCode": undefined,
    "type": "sideboard",
  },
  Object {
    "cardName": "Soul-Guide Lantern",
    "collectorNumber": undefined,
    "count": "3",
    "expansionCode": undefined,
    "type": "sideboard",
  },
  Object {
    "cardName": "Welding Jar",
    "collectorNumber": undefined,
    "count": "1",
    "expansionCode": undefined,
    "type": "sideboard",
  },
]
`;

exports[`parseTextEntries should parse standard format text entries 1`] = `
Array [
  Object {
    "cardName": "Gravecrawler",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "geralfs messenger",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "damping sphere",
    "collectorNumber": undefined,
    "count": "3",
    "expansionCode": undefined,
    "type": "maindeck",
  },
]
`;

exports[`parseTextEntries should parse standard format text entries regardless of bad input 1`] = `
Array [
  Object {
    "cardName": "Gravecrawler",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "geralfs messenger",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "damping sphere",
    "collectorNumber": undefined,
    "count": "3",
    "expansionCode": undefined,
    "type": "sideboard",
  },
]
`;

exports[`parseTextEntries should parse standard format text entries with Sideboard line and extra whitespace 1`] = `
Array [
  Object {
    "cardName": "Gravecrawler",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "geralfs messenger",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "damping sphere",
    "collectorNumber": undefined,
    "count": "3",
    "expansionCode": undefined,
    "type": "sideboard",
  },
]
`;

exports[`parseTextEntries should parse standard format text entries with Sideboard line divider 1`] = `
Array [
  Object {
    "cardName": "Gravecrawler",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "geralfs messenger",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "damping sphere",
    "collectorNumber": undefined,
    "count": "3",
    "expansionCode": undefined,
    "type": "sideboard",
  },
]
`;

exports[`parseTextEntries should parse standard format text entries with empty line divider 1`] = `
Array [
  Object {
    "cardName": "Gravecrawler",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "geralfs messenger",
    "collectorNumber": undefined,
    "count": "4",
    "expansionCode": undefined,
    "type": "maindeck",
  },
  Object {
    "cardName": "damping sphere",
    "collectorNumber": undefined,
    "count": "3",
    "expansionCode": undefined,
    "type": "sideboard",
  },
]
`;
